move rundown creation to rundown service
